# powell-opt

./: .gitignore  BUILDING.md  Cargo.toml  Justfile  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml  angreal_ci.yml  cibw.yml
bench/: bench_execution_only.py  benchmark_powell_opt.py  benchmark_scipy.py  run_bench.sh
examples/: basic_usage.py
src/: lib.rs  options.rs  tests.rs
tests/: basic_test.py
