[dependencies]
pyo3 = "0.24.2"
ndarray = "0.16.1"
# For CI wheel building:
# https://github.com/PyO3/maturin-action/discussions/162#discussioncomment-7978369
openssl = { version = "0.10", features = ["vendored"], optional = true }
ndarray-linalg = { version = "0.17" }
openssl-probe = { version = "0.1", optional = true }

#scirs2-optimize = { version = "0.1.0-alpha.1", git = "https://github.com/lmmx/scirs", branch = "test-powell-quadratic" }
#scirs2-optimize = { version = "0.1.0-alpha.2", git = "https://github.com/lmmx/scirs", branch = "patch-1" }
scirs2_optimize = { package = "scirs2-optimize", version = "0.1.0-alpha.2", git = "https://github.com/cool-japan/scirs", branch = "master" }

# This branch won't work with aarch64 cross-compilation (lax v0.17.0 shipped a fix)
# https://github.com/rust-ndarray/ndarray-linalg/pull/354
# [target.'cfg(not(target_arch = "aarch64"))'.dependencies]
# scirs2_optimize = { package = "scirs2-optimize", version = "0.1.0-alpha.1", git = "https://github.com/lmmx/scirs", branch = "test-powell-quadratic" }
# 
# # This branch makes i686 behave oddly, gate it to just use on aarch64
# [target.aarch64-unknown-linux-gnu.dependencies]
# scirs2_optimize_aarch64 = { package = "scirs2-optimize", version = "0.1.0-alpha.2", git = "https://github.com/lmmx/scirs", branch = "patch-1" }

[features]
openblas-system = ["ndarray-linalg/openblas-system"]
openssl-vendored = ["dep:openssl", "dep:openssl-probe"]

[lib]
name = "powell_opt"
crate-type = ["cdylib"]

[package]
name = "powell-opt"
version = "0.1.0"
edition = "2024"
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "Python bindings for the Powell method from scirs2-optimize"
readme = "README.md"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["openssl", "ndarray-linalg"]

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"

[dev-dependencies]
approx = "0.5.1"
cargo-husky = { version = "1.5.0", default-features = false, features = [
  "user-hooks",
] }
