[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "powell-opt"
description = "Python bindings for the Powell method from scirs2-optimize"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
authors = [{ email = "louismmx@gmail.com", name = "Louis Maddox" }]
keywords = ["optimization", "powell", "scientific", "minimize"]
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
  "maturin[patchelf]>=1.8.2",
  "pdm>=2.22.3",
  "pdm-bump>=0.9.10",
  "pre-commit>=4.1.0",
]
bench = ["numpy>=1.20.0", "rich>=14.0.0", "scipy>=1.13.1"]
tests = ["pytest>=8.3.5"]

[project.urls]
Homepage = "https://github.com/lmmx/powell-optimize"
Repository = "https://github.com/lmmx/powell-optimize.git"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
#skip = ["*-musllinux_i686"]
before-build = "pip install maturin"
#test-command = "python -m unittest lightmotif.tests -v"
build-verbosity = 1
free-threaded-support = false

[tool.cibuildwheel.linux]
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"

[tool.cibuildwheel.macos]
before-all = ["curl -sSf https://sh.rustup.rs | sh -s -- -y"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.12" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
inherit.before-all = "append"
before-all = ["rustup target add x86_64-apple-darwin"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
inherit.before-all = "append"
before-all = ["rustup target add aarch64-apple-darwin"]
